--- a/p8105_hw1_yx2578.md
+++ b/p8105_hw1_yx2578.md
@@ -3,3 +3,138 @@ Homework 1
 Vera Xu
 
 This is my solution to HW1.
+
+``` r
+library(tidyverse)
+```
+
+    ## ── Attaching packages ───────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──
+
+    ## ✓ ggplot2 3.3.2     ✓ purrr   0.3.4
+    ## ✓ tibble  3.0.3     ✓ dplyr   1.0.2
+    ## ✓ tidyr   1.1.2     ✓ stringr 1.4.0
+    ## ✓ readr   1.3.1     ✓ forcats 0.5.0
+
+    ## ── Conflicts ──────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+    ## x dplyr::filter() masks stats::filter()
+    ## x dplyr::lag()    masks stats::lag()
+
+``` r
+library(palmerpenguins)
+```
+
+## Problem 1
+
+Create a data frame with the specified elements.
+
+``` r
+prob1_df = 
+  tibble(
+    samp = rnorm(10),
+    samp_gt_0 = samp > 0,
+    char_vec = c("a", "b", "c", "d", "e", "f", "g", "h", "i", "j"),
+    factor_vec = factor(c("low", "low", "low", "mod", "mod", "mod", "mod", "high", "high", "high"))
+  )
+```
+
+Take the mean of each variable in my data frame.
+
+``` r
+mean(pull(prob1_df, samp))
+```
+
+    ## [1] 0.3698857
+
+``` r
+mean(pull(prob1_df, samp_gt_0))
+```
+
+    ## [1] 0.6
+
+``` r
+mean(pull(prob1_df, char_vec))
+```
+
+    ## Warning in mean.default(pull(prob1_df, char_vec)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+``` r
+mean(pull(prob1_df, factor_vec))
+```
+
+    ## Warning in mean.default(pull(prob1_df, factor_vec)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+I can take the mean of numbers and logical but not character or factor.
+
+``` r
+as.numeric(pull(prob1_df, samp))
+```
+
+    ##  [1]  0.3280314 -0.3157784 -0.1913841 -1.0536388  2.8421788  1.3708045
+    ##  [7] -0.6050455  0.3386518  0.5429420  0.4420957
+
+``` r
+as.numeric(pull(prob1_df, samp_gt_0))
+```
+
+    ##  [1] 1 0 0 0 1 1 0 1 1 1
+
+``` r
+as.numeric(pull(prob1_df, char_vec))
+```
+
+    ## Warning: NAs introduced by coercion
+
+    ##  [1] NA NA NA NA NA NA NA NA NA NA
+
+``` r
+as.numeric(pull(prob1_df, factor_vec))
+```
+
+    ##  [1] 2 2 2 3 3 3 3 1 1 1
+
+``` r
+as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
+```
+
+    ##  [1] 0.3280314 0.0000000 0.0000000 0.0000000 2.8421788 1.3708045 0.0000000
+    ##  [8] 0.3386518 0.5429420 0.4420957
+
+## Problem 2
+
+``` r
+data("penguins", package = "palmerpenguins")
+```
+
+#### Description of the penguins dataset
+
+  - The penguins dataset contains the following variables:
+    bill\_depth\_mm, bill\_length\_mm, body\_mass\_g,
+    flipper\_length\_mm, island, sex, species, year .
+      - The species variable contains Adelie, Gentoo, Chinstrap
+      - The island variable contains Torgersen, Biscoe, Dream
+  - The penguins dataset has 344 rows and 8 columns.
+  - The mean flipper length is 200.9152047 mm.
+
+#### Scatterplot showing the distribution of bill length and flipper length by species
+
+``` r
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+![](p8105_hw1_yx2578_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
+
+``` r
+ggsave("hw1_q2.png")
+```
+
+    ## Saving 7 x 5 in image
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
