--- a/p8105_hw1_yx2578.md
+++ b/p8105_hw1_yx2578.md
@@ -43,13 +43,13 @@ Take the mean of each variable in my data frame.
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] -0.07567048
+    ## [1] -0.07130993
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.5
+    ## [1] 0.4
 
 ``` r
 mean(pull(prob1_df, char_vec))
@@ -75,14 +75,14 @@ I can take the mean of numbers and logical but not character or factor.
 as.numeric(pull(prob1_df, samp))
 ```
 
-    ##  [1]  0.23013245 -0.48387299  0.54171233  1.23384828  0.57767342 -0.03305213
-    ##  [7] -2.09551894 -0.36562884 -0.54315971  0.18116134
+    ##  [1]  1.9033789  0.3970194 -0.6781708 -3.1092237 -0.6730126 -0.3421841
+    ##  [7] -0.3383456  1.2429059 -0.8919120  1.7764453
 
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0))
 ```
 
-    ##  [1] 1 0 1 1 1 0 0 0 0 1
+    ##  [1] 1 1 0 0 0 0 0 1 0 1
 
 ``` r
 as.numeric(pull(prob1_df, char_vec))
@@ -102,8 +102,8 @@ as.numeric(pull(prob1_df, factor_vec))
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 0.2301325 0.0000000 0.5417123 1.2338483 0.5776734 0.0000000 0.0000000
-    ##  [8] 0.0000000 0.0000000 0.1811613
+    ##  [1] 1.9033789 0.3970194 0.0000000 0.0000000 0.0000000 0.0000000 0.0000000
+    ##  [8] 1.2429059 0.0000000 1.7764453
 
 ## Problem 2
 
@@ -124,7 +124,7 @@ data("penguins", package = "palmerpenguins")
 #### Scatterplot showing the distribution of bill length and flipper length by species
 
 ``` r
-ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species))+ geom_point()
 ```
 
     ## Warning: Removed 2 rows containing missing values (geom_point).
@@ -132,7 +132,7 @@ ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)
 ![](p8105_hw1_yx2578_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
 
 ``` r
-ggsave("hw1_q2.png")
+ggsave("p8105_hw1_q2.png")
 ```
 
     ## Saving 7 x 5 in image
